plugins {
    id "java"
}

group = "com.thebluehats.server"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()

    maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots" }
}

dependencies {
    implementation "org.spigotmc:spigot-api:1.16.3-R0.1-SNAPSHOT"
    implementation "com.konghq:unirest-java:3.11.04"
    implementation "com.google.inject:guice:4.1.0"
    testImplementation "junit:junit:4.11"
    testImplementation "org.mockito:mockito-core:3.5.15"
    testImplementation "org.powermock:powermock-api-mockito2:2.0.0"
    testImplementation "org.powermock:powermock-module-junit4:2.0.0"
}

task productionBuild(type: Jar) {
    manifest {
        attributes "Implementation-Title": "The Blue Hats Server",
                "Implementation-Version": archiveVersion,
                "Main-Class": "com.thebluehats.server.core.Main"
    }

    archiveBaseName = project.name + "-fatJar"

    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }

    with jar
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

tasks.withType(Test) {
    jvmArgs([
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
    ])
}
